<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MeteBoss</string>
	<string name="city">City</string>
	<string name="country">Country</string>
	<string name="wind">Wind</string>
	<string name="pressure">Pressure</string>
	<string name="temperature">Temperature</string>
	<string name="lastUpdate">Last Update</string>
	<string name="addCity">Add</string>
	<string name="cityActivityTitle">Details</string>
	<string name="addCityTitle">Add city</string>
	<string name="emptyFieldTitle">Empty Field(s)</string>
	<string name="emptyFieldMessage">You have to fill up the two fields</string>
	<string name="removeToast">&#160;has been removed</string>
	<string name="refresh">Refresh</string>
	<string name="refreshed">Datas have been refreshed</string>
	<string name="refreshing">Refreshing...</string>
</resources>
