<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<EditText
		android:layout_marginTop="20dp"
		android:id="@+id/cityField"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/city"
		android:inputType="text" />

	<EditText
		android:layout_marginTop="20dp"
		android:id="@+id/countryField"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/country"
		android:inputType="text" />

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/addCity"
		android:id="@+id/addButton"
		/>

</LinearLayout>
