<GridLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:columnCount="2"
	android:rowCount="7"
	android:rowOrderPreserved="false"
	android:useDefaultMargins="true">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="@string/city"
		android:id="@+id/cityLabel"
		android:layout_row="0"
		android:layout_column="0" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/cityValue"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_row="0"
		android:layout_column="1" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="@string/country"
		android:id="@+id/countryLabel"
		android:layout_row="1"
		android:layout_column="0" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/countryValue"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_row="1"
		android:layout_column="1" />

	<View
		android:background="#ffffff"
		android:layout_width="fill_parent"
		android:layout_height="1dip"
		android:layout_columnSpan="2"
		android:layout_row="2"
		android:layout_column="0"
		android:layout_centerVertical ="true" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/windLabel"
		android:text="@string/wind"
		android:layout_row="3"
		android:layout_column="0" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/windValue"
		android:layout_row="3"
		android:layout_column="1" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/pressureLabel"
		android:text="@string/pressure"
		android:layout_row="4"
		android:layout_column="0" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/pressureValue"
		android:layout_row="4"
		android:layout_column="1" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/temperature"
		android:id="@+id/temperatureLabel"
		android:layout_row="5"
		android:layout_column="0" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/temperatureValue"
		android:layout_row="5"
		android:layout_column="1" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/lastUpdate"
		android:id="@+id/lastUpdateLabel"
		android:layout_row="6"
		android:layout_column="0" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/lastUpdateValue"
		android:layout_row="6"
		android:layout_column="1" />

</GridLayout>
